2004-04-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/kernel.sgml: Expanded the documentation about the use of
	CYG_FLAG_WAITMODE_CLR.

2004-03-27  Sebastien Couret	<sebastien.couret@elios-informatique.fr>

	* src/debug/dbg-thread-demux.c (dbg_thread_syscall_rmt): Only
	needed if CYGDBG_KERNEL_DEBUG_GDB_THREAD_SUPPORT is enabled.

2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/kapi.h: Add throw specifications throughout.
	* src/kapi.cxx: Ditto.
	* include/sched.inl: Move include of thread.inl further down to
	allow Cyg_Scheduler inlines to be defined first.
	* include/thread.inl: Reorder destructors section and include
	sched.inl right before it to solve mutual header dependency
	problems.

2004-03-04  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/kernel.sgml: Document cyg_thread_delete return value.

2004-02-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/kmutex3.c (cyg_start): Use CYG_TEST_NA.
	* tests/kmutex4.c (cyg_start): Ditto.
	* tests/mutex2.cxx (cyg_start): Ditto.
	* tests/mutex3.cxx (cyg_start): Ditto.
	* tests/sync3.cxx (cyg_start): Ditto.
	* tests/thread2.cxx (cyg_start): Ditto.

	* tests/fptest.c (cyg_start): Use one line NA msg.
	* tests/smp.cxx (cyg_start): Ditto.
	* tests/timeslice.c (cyg_start): Ditto.
	* tests/tm_basic.cxx (cyg_start): Ditto.

2003-12-08  Dan Jakubiec  <djakubiec@yahoo.com>

	* src/common/kapi.cxx: Added new function cyg_thread_get_id().
	This function returns the unique thread ID for a given thread
	handle.

	* include/kapi.h: Added function prototype for cyg_thread_get_id().

	* doc/kernel.sgml: Added documentation for cyg_thread_get_id().

2003-10-13  Nick Garnett  <nickg@balti.calivar.com>

	* src/common/clock.cxx (Cyg_Counter::tick): Changed code to deal
	with manipulation of unsorted lists (see ChangeLogs passim). There
	are several corner cases where the current code does not
	work. Replaced with a more straightforward, but slightly more
	expensive, implementation.
